--- a/pages/templates/template-parts/footer.html
+++ b/pages/templates/template-parts/footer.html
@@ -43,7 +43,7 @@
             /></a>
             <p>© 2022 HUSTLER DIGITAL</p>
             <p>
-                <a href="/uk/privacy-policy/">
+                <a href="{% url 'pages:privacy-policy' %}">
                     {% trans "Privacy Policy" %}
                 </a>
             </p>
