--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -43,19 +43,11 @@
                     {% for post in other_posts %}
                         <li class="news-group__item news-item">
                             {% if post.card_thumbnail %}
-                                <img src="{{ post.card_thumbnail.url }}" style="shape-outside: url({{ post.card_thumbnail.url }})" class="news-item__img">
+                                <img src="{{ post.card_thumbnail.url }}" style="shape-outside: url({{post.card_thumbnail.url}})" class="news-item__img">
                             {% endif %}
                             <div class="news-item__inner">
-                                {% if LANGUAGE_CODE == 'en' %}
-                                    <h3 class="news-item__title">{{ post.title_en }}</h3>
-                                    <p class="news-item__excerpt">{{ post.excerpt_en|truncatechars:90 }}</p>
-                                {% elif LANGUAGE_CODE == 'ru'  %}
-                                    <h3 class="news-item__title">{{ post.title_ru }}</h3>
-                                    <p class="news-item__excerpt">{{ post.excerpt_ru|truncatechars:90 }}</p>
-                                {% elif LANGUAGE_CODE == 'uk'  %}
-                                    <h3 class="news-item__title">{{ post.title_ua }}</h3>
-                                    <p class="news-item__excerpt">{{ post.excerpt_ua|truncatechars:90 }}</p>
-                                {% endif %}
+                                <h3 class="news-item__title">{{ post.title }}</h3>
+                                <p class="news-item__excerpt">{{ post.excerpt|truncatechars:90 }}</p>
                                 <button type="button" class="news-item__btn" data-url="{% url 'news:detail' post.pk %}">
                                     <span>{% trans 'Read more' %}</span>
                                     <img src="{% static 'img/icon-arrow.svg' %}" alt="{% trans 'arrow' %}">
