Added seo tags, added news bg

--- a/pages/static/css/news.css
+++ b/pages/static/css/news.css
@@ -24,7 +24,7 @@
     grid-template-columns: minmax(0, 1fr);
     row-gap: 120px;
     padding-top: calc(var(--height-header) + var(--height-header-margin));
-    background-color: #1C1C1C;
+    background: #1C1C1C url("../img/spots-2.png") repeat-y center top / 100% auto;
 }
 
 .news-slider .slick-arrow {
