fixed css selector

--- a/cases/templates/cases/detail.html
+++ b/cases/templates/cases/detail.html
@@ -31,8 +31,8 @@
                         <img src="{% static 'img/globus-mint.svg' %}">
                     {% elif post.color_theme == 'red' %}
                         <img src="{% static 'img/globus-red.svg' %}">
-                    {% elif post.color_theme == 'ligth-blue' %}
-                        <img src="{% static 'img/globus-ligth-blue.svg' %}">
+                    {% elif post.color_theme == 'light-blue' %}
+                        <img src="{% static 'img/globus-light-blue.svg' %}">
                     {% elif post.color_theme == 'orange' %}
                         <img src="{% static 'img/globus-orange.svg' %}">
                     {% elif post.color_theme == 'pink' %}
